FIX- table's  title alignment and color

--- a/Netflix/css/style.css
+++ b/Netflix/css/style.css
@@ -142,12 +142,14 @@ img{
 	width: 100%;
 	margin-top: 2rem;
 	border-collapse: collapse;
-	border-spacing: 0;
+    border-spacing: 0;
 }
 
 .table thead th {
 	text-transform: uppercase;
-	padding: 0.8rem;
+    padding: 0.8rem;
+    color:white;
+    text-align:center;
 }
 
 .table tbody {
